log
Thu Mar 26 07:47:46 PM UTC 2026: 
 list.c | 110 +++++++++++++++++++++++------------------------------------------
 1 file changed, 38 insertions(+), 72 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:92:5: error: unknown type name ‘nodo’
   92 |     nodo* borrar = list -> current;
      |     ^~~~
list.c:92:20: error: initialization of ‘int *’ from incompatible pointer type ‘Node *’ [-Wincompatible-pointer-types]
   92 |     nodo* borrar = list -> current;
      |                    ^~~~
list.c:93:5: error: unknown type name ‘nodo’
   93 |     nodo* anterior = list -> current-> prev;
      |     ^~~~
list.c:93:22: error: initialization of ‘int *’ from incompatible pointer type ‘Node *’ [-Wincompatible-pointer-types]
   93 |     nodo* anterior = list -> current-> prev;
      |                      ^~~~
list.c:94:5: error: unknown type name ‘nodo’
   94 |     nodo* siguiente = list -> current -> next;
      |     ^~~~
list.c:94:23: error: initialization of ‘int *’ from incompatible pointer type ‘Node *’ [-Wincompatible-pointer-types]
   94 |     nodo* siguiente = list -> current -> next;
      |                       ^~~~
list.c:97:22: error: assignment to ‘Node *’ from incompatible pointer type ‘int *’ [-Wincompatible-pointer-types]
   97 |         list -> head = siguiente;
      |                      ^
list.c:102:15: error: request for member ‘prev’ in something not a structure or union
  102 |         borrar->prev->next = NULL;
      |               ^~
list.c:107:9: error: ‘siguente’ undeclared (first use in this function); did you mean ‘siguiente’?
  107 |         siguente->prev = anterior;
      |         ^~~~~~~~
      |         siguiente
list.c:107:9: note: each undeclared identifier is reported only once for each function it appears in
list.c:108:17: error: request for member ‘next’ in something not a structure or union
  108 |         anterior->next = siguiente;
      |                 ^~
3180670
Thu Mar 26 07:48:47 PM UTC 2026: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:107:9: error: ‘siguente’ undeclared (first use in this function); did you mean ‘siguiente’?
  107 |         siguente->prev = anterior;
      |         ^~~~~~~~
      |         siguiente
list.c:107:9: note: each undeclared identifier is reported only once for each function it appears in
ae47143
Thu Mar 26 07:49:09 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/60
f5e99be
Thu Mar 26 07:54:39 PM UTC 2026: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:101:13: error: ‘siguiente’ undeclared (first use in this function); did you mean ‘sigevent’?
  101 |     else if(siguiente == NULL){
      |             ^~~~~~~~~
      |             sigevent
list.c:101:13: note: each undeclared identifier is reported only once for each function it appears in
list.c:107:27: error: ‘anterior’ undeclared (first use in this function)
  107 |         siguiente->prev = anterior;
      |                           ^~~~~~~~
list.c:112:1: error: control reaches end of non-void function [-Werror=return-type]
  112 | }
      | ^
cc1: all warnings being treated as errors
cf97779
Thu Mar 26 07:59:12 PM UTC 2026: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:97:24: error: ‘siguente’ undeclared (first use in this function); did you mean ‘siguiente’?
   97 |         list -> head = siguente;
      |                        ^~~~~~~~
      |                        siguiente
list.c:97:24: note: each undeclared identifier is reported only once for each function it appears in
29ccd11
Thu Mar 26 08:01:07 PM UTC 2026: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/60
60ed6b2
Thu Mar 26 08:03:23 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:104:15: error: ‘Node’ has no member named ‘tail’
  104 |         borrar->tail->prev = NULL;
      |               ^~
9e2d1d8
Thu Mar 26 08:03:48 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/60
2b99559
Thu Mar 26 08:04:32 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
83e8c17
Sat Mar 28 12:58:11 AM UTC 2026: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:36:5: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   36 |     lista->head = NULL;
      |     ^~~~~
      |     list
list.c:36:5: note: each undeclared identifier is reported only once for each function it appears in
list.c:35:11: error: unused variable ‘list’ [-Werror=unused-variable]
   35 |     List *list = (List *)malloc(sizeof(List));
      |           ^~~~
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
b2ce4ae
